--- a/src/nav/nav.css
+++ b/src/nav/nav.css
@@ -27,6 +27,8 @@ nav a:hover{
 }
 
 
+/**Scrollbar css*/
+
 ::-webkit-scrollbar-track {
 	background-color: transparent;
 }
@@ -46,3 +48,29 @@ nav a:hover{
 	background-color: hsl(0, 0%, 100%);
 }
 
+
+/**scrollup css*/
+
+
+.scroll-button {
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    opacity: 0;
+    transform: translateY(100px);
+    transition: .3s ease;
+    z-index: 2;
+}
+
+.scroll-button.show {
+    opacity: 1;
+    transform: translateY(0);
+}
