--- a/src/nav/nav.css
+++ b/src/nav/nav.css
@@ -26,6 +26,10 @@ nav a:hover{
     background: rgba(0, 0, 0, 0.3);
 }
 
+.navBar-link.active {
+    background: rgba(0, 0, 0, 0.3);
+}
+
 
 /**Scrollbar css*/
 
