--- a/src/nav/nav.css
+++ b/src/nav/nav.css
@@ -1,4 +1,4 @@
-nav{
+nav {
     background: rgba(141, 137, 137, 0.3);
     width: max-content;
     display: block;
@@ -17,12 +17,12 @@ nav{
 nav a {
     background: transparent;
     padding: 0.9rem;
-    border-radius:50%;
+    border-radius: 50%;
     display: flex;
     font-size: 1.1rem;
 }
 
-nav a:hover{
+nav a:hover {
     background: rgba(0, 0, 0, 0.3);
 }
 
@@ -34,22 +34,23 @@ nav a:hover{
 /**Scrollbar css*/
 
 ::-webkit-scrollbar-track {
-	background-color: transparent;
+    background-color: transparent;
 }
 
 ::-webkit-scrollbar {
-	width: 5px;
-	background-color: transparent;
+    width: 5px;
+    background-color: gray;
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: hsl(180, 1%, 26%);;
-	border-radius: 8px;
-	transition: .3s ease;
+    background-color: hsl(180, 1%, 26%);
+    ;
+    border-radius: 8px;
+    transition: .3s ease;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-	background-color: hsl(0, 0%, 100%);
+    background-color: hsl(0, 0%, 100%);
 }
 
 
@@ -77,4 +78,182 @@ nav a:hover{
 .scroll-button.show {
     opacity: 1;
     transform: translateY(0);
+}
+
+
+/** About css*/
+
+.section-body {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    margin-top: 64px;
+    margin-bottom: 64px;
+}
+
+.section-body.contained {
+    max-width: 600px;
+}
+
+.about-grid-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 180px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: .3s;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
+}
+
+@media (max-width: 838px) {
+    .about-grid {
+        grid-template-columns: 1fr;
+    }
+}
+
+
+.about-grid-item:hover {
+    transform: scale(1.025);
+    box-shadow: var(--shadows-medium);
+}
+
+
+.card-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 100%;
+    border-radius: 8px;
+    transition: .3s;
+}
+
+.card__header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    font-weight: 600;
+    height: 32px;
+    width: 100%;
+    padding: 10px 0;
+    border-bottom: 1px solid hsl(0deg 3% 48% / 17%);
+}
+
+.card__body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    font-size: 1rem;
+    padding: 32px 16px;
+    overflow-y: auto;
+}
+
+.card-grid {
+    display: grid;
+    gap: 9px;
+}
+
+.card-grid__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .5rem;
+}
+
+.card-grid__item>svg {
+	width: 32px;
+    height: 32px;
+}
+
+
+[data-about=lang] .card-grid {
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    justify-items: center;
+}
+
+[data-about=libfram] .card-grid {
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    justify-items: center;
+}
+
+
+[data-about=social] .card-grid {
+    font-size: 2rem;
+    grid-template-columns: repeat(auto-fill, minmax(128px, 1fr));
+    justify-items: stretch;
+}
+
+[data-about=social] .card-grid__item {
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    gap: .5rem;
+}
+
+
+.about-grid--2 {
+    grid-area: 1 / 1 / 2 / 4;
+}
+
+.about-grid--3 {
+    grid-area: 2 / 1 / 3 / 3;
+}
+
+.about-grid--6 {
+    grid-area: 3 / 2 / 4 / 4;
+}
+
+.about-grid--7 {
+    grid-area: 4 / 1 / 5 / 3;
+}
+
+.about-grid--9 {
+    grid-area: 5/ 1 / 6 / 4;
+}
+
+
+@media (max-width: 838px) {
+    .section-body {
+        max-width: 400px;
+    }
+
+    .about-grid--2 {
+        grid-area: unset;
+    }
+
+    .about-grid--3 {
+        grid-area: unset;
+    }
+
+    .about-grid--6 {
+        grid-area: unset;
+    }
+
+    .about-grid--7 {
+        grid-area: unset;
+    }
+
+    .about-grid--9 {
+        grid-area: unset;
+    }
+}
+
+[data-about=resume] .grid__item-inner {
+	padding: 1rem;
+}
+
+[data-about=resume] .grid__item-inner a {
+	width: 100%;
+	max-height: calc(150px - 2rem);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+[data-about=resume] img {
+	/* height: 150px; */
+	border-radius: var(--radii-1);
 }
