--- a/src/nav/nav.css
+++ b/src/nav/nav.css
@@ -162,8 +162,9 @@ nav a:hover {
     gap: .5rem;
 }
 
-.card-grid__item>svg {
-	width: 32px;
+.card-grid__item>svg,
+.card-grid__item a >svg {
+    width: 32px;
     height: 32px;
 }
 
@@ -191,6 +192,34 @@ nav a:hover {
     flex-wrap: nowrap;
     justify-content: center;
     gap: .5rem;
+}
+
+.social-item {
+	display: flex;
+	gap: 8px;
+}
+
+.social {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.social-inner {
+    font-size: 18px;
+}
+
+
+.social-container {
+	display: flex;
+	justify-content: left;
+	gap: 8px;
+	margin-top: 32px;
+}
+
+.social-container a {
+	font-weight: 500;
+	text-transform: uppercase;
 }
 
 
@@ -241,19 +270,72 @@ nav a:hover {
     }
 }
 
+[data-about=call] {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    transition: .3s;
+}
+
+
+[data-about=call] a {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
 [data-about=resume] .grid__item-inner {
-	padding: 1rem;
+    padding: 1rem;
 }
 
 [data-about=resume] .grid__item-inner a {
-	width: 100%;
-	max-height: calc(150px - 2rem);
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+    width: 100%;
+    max-height: calc(150px - 2rem);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 [data-about=resume] img {
-	/* height: 150px; */
-	border-radius: var(--radii-1);
+    /* height: 150px; */
+    border-radius: var(--radii-1);
+}
+
+
+
+@keyframes pulse-light {
+    0% {
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.75);
+    }
+
+    70% {
+        box-shadow: 0 0 0 16px rgba(52, 172, 224, 0);
+    }
+
+    100% {
+        box-shadow: 0 0 0 0 rgba(52, 172, 224, 0);
+    }
+}
+
+@keyframes pulse-dark {
+    0% {
+        box-shadow: 0 0 0 0 hsla(0, 0%, 13%, 0.75);
+    }
+
+    70% {
+        box-shadow: 0 0 0 16px rgba(52, 172, 224, 0);
+    }
+
+    100% {
+        box-shadow: 0 0 0 0 rgba(52, 172, 224, 0);
+    }
 }
